--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,42 @@ textarea
 .button-link:hover{
   opacity: 0.8;
 }
+
+.contact-button {
+  background-color: #2694f5; /* Or any color you prefer */
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px; /* Add some spacing between buttons */
+  text-decoration: none; /* Remove underlines */
+  display: inline-block; /* Important for consistent padding/margin */
+}
+.contact-button:hover{
+  opacity: 0.8;
+}
+.view-button {
+  background-color: #259661; /* Or any color you prefer */
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 10px; /* Add some spacing between buttons */
+  text-decoration: none; /* Remove underlines */
+  display: inline-block; /* Important for consistent padding/margin */
+}
+.view-button:hover{
+  opacity: 0.8;
+}
+.contact-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Adds space between cards */
+}
+
+
 .contact-details-container {
   /* Add styles for the overall container */
   padding: 20px;
@@ -119,4 +155,5 @@ display: inline-block;
   border: 1px solid #ddd; 
   border-radius: 8px;
   margin-top: 20px;
+
 }
